# giao-hang-le

./: Copy of donhang.txt  giatien.txt  giatien.xlsx  giatien1.txt  giatien2.csv  giatien2.txt  khohang.txt
client/: .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
client/.github/: actions.yml
client/src/: app.css
client/src/lib/: types.d.ts
client/src/routes/: __error.svelte  __layout.svelte  index.svelte
client/src/routes/kho-hang/: [id].svelte  [id].ts  __layout.svelte
server/: Cargo.toml
server/sql/: ghl.sql
server/src/: main.rs
server/src/sql/: SQLQuery2.sql  add_data.sql  code.sql  functions.sql  insert_don_hang.sql  insert_tien_trinh.sql  procedures.sql  table.sql  tables.sql  tientrinh.sql  tinhtien.sql  trigger.sql
