[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
axum = { version = "0.5.6", features = [ "ws" ] }
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
